# aic

./: CMakeLists.txt  README.md
aic_lib/include/: aic.h  aic_brake.h  aic_can.h  aic_comm.h  aic_motor.h  aic_net.h  aic_sensors.h  aic_serial.h
aic_lib/src/: aic.cpp  aic_brake.cpp  aic_can.cpp  aic_comm.cpp  aic_motor.cpp  aic_sensors.cpp  aic_serial.cpp
aic_test/src/: can_test.cpp  serial_test.cpp
